include chainhash in schema api response
